--- a/docs/Notes/Research/软工.md
+++ b/docs/Notes/Research/软工.md
@@ -1,4 +1,6 @@
-# 软工A会
+[toc]
+
+## 软工A会
 
 |      | A会      |                                                              |                                             |
 | ---- | -------- | ------------------------------------------------------------ | ------------------------------------------- |
@@ -12,3 +14,8 @@
 | 2    | TSE      | IEEE Transactions on Software Engineering                    | http://dblp.uni-trier.de/db/journals/tse/   |
 | 3    | TSC      | IEEE Transactions on Services Computing                      | http://dblp.uni-trier.de/db/journals/tsc/   |
 
+截止时间查询：https://ccfddl.top/
+
+## 知名学者
+
+张令明教授 https://lingming.cs.illinois.edu/index.html
