--- a/docs/Notes/Research/软工.md
+++ b/docs/Notes/Research/软工.md
@@ -19,3 +19,7 @@
 ## 知名学者
 
 张令明教授 https://lingming.cs.illinois.edu/index.html
+
+浙江大学刘忠鑫 https://zhongxin-liu.github.io/
+
+浙江大学胡星 https://xing-hu.github.io/publications/
