--- a/docs/Notes/Linux/常用命令.md
+++ b/docs/Notes/Linux/常用命令.md
@@ -13,5 +13,10 @@ ps -aux | grep $pid
 # 先安装nvidia-htop库
 # pip3 install nvidia-htop
 nvidia-htop.py -l
+
+vim ~/.bashrc
+# 最后一行添加
+alias gpu='nvidia-htop.py -l'
+source ~/.bashrc
 ```
 
