--- a/docs/Notes/Linux/常用命令.md
+++ b/docs/Notes/Linux/常用命令.md
@@ -20,3 +20,31 @@ alias gpu='nvidia-htop.py -l'
 source ~/.bashrc
 ```
 
+记录一次java -version不起作用的问题
+
+```
+# 系统默认装了一个java在/etc/profile
+export JAVA_8_HOME=/usr/local/java/jdk1.8.0_351
+export JAVA_11_HOME=/usr/local/java/jdk-11.0.17
+export JAVA_17_HOME=/usr/local/java/jdk-17.0.5
+
+export JAVA_HOME=$JAVA_8_HOME
+
+export CLASSPATH=.:$JAVA_HOME/lib:$JRE_HOME/lib:$CLASSPATH
+export PATH=$JAVA_HOME/bin:$JRE_HOME/bin:$PATH
+export JRE_HOME=$JAVA_HOME/jre
+
+# 我自己装的java导入是在~/.bashrc
+JAVA_HOME=/home/rambo/java/jdk-17.0.11/
+CLASSPATH=%JAVA_HOME%/lib:%CLASSPATH
+export PATH CLASSPATH JAVA_HOME
+
+发现不论怎么改.bashrc都不起作用，最后用echo $PATH，发现1.8在17.0之前，这说明PATH导入有问题
+/home/rambo/miniconda3/bin:/home/rambo/miniconda3/condabin:/usr/local/java/jdk1.8.0_351/bin:/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/rambo/java/jdk-17.0.11/bin:/home/rambo/java/jdk-17.0.11/jre/bin:/home/rambo/java/jdk-17.0.11/bin:/home/rambo/miniconda3/bin:/home/rambo/miniconda3/condabin:/usr/local/java/jdk1.8.0_351/bin:/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/rambo/java/jdk-17.0.11/bin:/home/rambo/java/jdk-17.0.11/jre/bin:/home/rambo/java/jdk-17.0.11/bin:/home/rambo/java/jdk-17.0.11/bin
+
+将.bashrc改成以下就OK了
+export JAVA_HOME=/home/rambo/java/jdk-17.0.11
+export CLASSPATH=$JAVA_HOME/lib/:$CLASSPATH
+export PATH=$JAVA_HOME/bin:$PATH
+```
+
