--- a/docs/Notes/Linux/常用命令.md
+++ b/docs/Notes/Linux/常用命令.md
@@ -48,3 +48,43 @@ export CLASSPATH=$JAVA_HOME/lib/:$CLASSPATH
 export PATH=$JAVA_HOME/bin:$PATH
 ```
 
+测试VPS性能
+
+```
+https://blog.csdn.net/qq_18804633/article/details/128717006
+```
+
+
+
+搭建django服务器：
+
+```
+ssh-keygen -o
+vim .ssh/id_rsa.pub
+#添加key到github
+
+# 安装miniconda
+mkdir -p ~/miniconda3
+wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
+rm -rf ~/miniconda3/miniconda.sh
+~/miniconda3/bin/conda init bash
+~/miniconda3/bin/conda init zsh
+
+# django settings配置 setting.py 文件里 ALLOWED_HOSTS = []
+ALLOWED_HOSTS = ['0.0.0.0']
+
+pip install django
+
+python manage.py migrate
+
+python manage.py runserver 0.0.0.0:8000
+
+nginx：
+sudo apt-get update
+sudo apt-get install nginx
+
+conda install -c "conda-forge/label/gcc7" uwsgi
+
+```
+
