--- a/docs/Research/软工.md
+++ b/docs/Research/软工.md
@@ -18,8 +18,141 @@
 
 ## 知名学者
 
-张令明教授 https://lingming.cs.illinois.edu/index.html
+### 浙江大学
 
-浙江大学刘忠鑫 https://zhongxin-liu.github.io/
+智能计算与软件中心
+http://210.32.4.129/redir.php?catalog_id=19296&object_id=19596
 
-浙江大学胡星 https://xing-hu.github.io/publications/
+**刘忠鑫**
+
+- 研究方向：主要研究方向是代码变更表示学习，代表作：NNGen、CCRep、CCT5；AI4SE
+- https://zhongxin-liu.github.io/
+
+**胡星**
+
+- 研究方向：代码生成
+- https://xing-hu.github.io/publications/
+
+**夏鑫**
+https://xin-xia.github.io/
+
+### 北京大学
+
+**Ge Li**
+https://ligechina.github.io/#Teaching
+
+### 上海交通大学
+
+**林云**
+
+- 软件安全
+- http://linyun.info/
+
+### 复旦大学
+
+**复旦大学软件工程实验室**
+
+http://www.se.fudan.edu.cn/index.html#faculity-member
+
+Yuan Zhang
+https://yuanxzhang.github.io/#background
+
+**Wei Tao**
+https://itaowe.com/
+
+### 中山大学
+
+**王焱林**
+https://yanlin.info/
+
+**石恩升** 
+https://enshengshi.github.io/
+
+### 北京理工大学
+
+**张宇霞**
+https://sites.google.com/view/yuxia-zhang/
+
+### 南通大学
+
+智能软件工程研究组
+https://smartse.github.io/group/index.html
+
+杨少宇
+http://shaoyuyoung.com/#home
+
+### 南京大学
+
+Chunrong Fang
+https://chunrong.github.io/
+
+吴化尧
+https://huayaow.github.io/
+
+### 香港中文大学（深圳）
+
+贺品嘉
+https://pinjiahe.github.io/
+
+徐俊杰龙
+https://siyuexi.github.io/
+
+### 武汉大学
+
+梁鹏
+https://www.researchgate.net/profile/Peng-Liang-4
+
+Linghao Zhang
+https://szhang.me/
+
+### 天津大学
+
+Sen Chen
+https://sen-chen.github.io/
+
+### 北航
+
+何逸宸
+https://hyc2026.github.io/#/README
+
+### 中国科学院大学
+
+Junjie Wang
+https://people.ucas.edu.cn/~0058217?language=en#%20690137
+
+
+
+### Singapore Management University
+
+David lo
+http://www.mysmu.edu/faculty/davidlo/
+
+Jiakun Liu
+https://jiakun-liu.github.io/
+
+Thong Hoang (James)
+https://hvdthong.github.io/
+
+### UIUC
+
+#### 张令明
+
+- 院校：UIUC
+- 研究方向：软件测试
+- 主页：https://lingming.cs.illinois.edu/index.html
+
+### University of Stuttgart
+
+The Software Lab 
+https://software-lab.org/index.html
+
+Matteo Paltenghi 师从Prof. Dr. Michael Pradel.
+https://matteopaltenghi.com/
+
+
+
+### AI
+
+https://siyuyuan.github.io/
+
+https://tqchen.com/projects
