--- a/docs/Notes/Linux/常用命令.md
+++ b/docs/Notes/Linux/常用命令.md
@@ -13,6 +13,11 @@ du -h /home/rambo/ --max-depth=1 | sort -hr | head -n 10
 ```bash
 nvidia-smi
 ps -aux | grep $pid
+
+# 查看显卡占用
+fuser -v /dev/nvidia1
+# 杀死占显存的进程
+fuser -v /dev/nvidia1 |awk '{for(i=1;i<=NF;i++)print "kill -9 " $i;}' | sh
 ```
 
 一条命令解决
@@ -94,5 +99,12 @@ sudo apt-get install nginx
 
 conda install -c "conda-forge/label/gcc7" uwsgi
 
+```
+
+清理GPU缓存（看不到进程但是有显存占用）
+
+```
+fuser -v /dev/nvidia*
+fuser -v /dev/nvidia* |awk '{for(i=1;i<=NF;i++)print "kill -9 " $i;}' | sh
 ```
 
