--- a/docs/Notes/Linux/常用命令.md
+++ b/docs/Notes/Linux/常用命令.md
@@ -2,6 +2,15 @@
 
 ```
 du -h /home/rambo/ --max-depth=1 | sort -hr | head -n 10
+
+df -h
+```
+
+## 测速
+
+```
+pip3 install speedtest-cli
+speedtest
 ```
 
 
