--- a/docs/Research/Group meeting/审稿意见.md
+++ b/docs/Research/Group meeting/审稿意见.md
@@ -1,3 +1,40 @@
+
+
+
+
+1. The proposed approach (Section 4) also looks very straightforward, the claimed 3 novelties are not well reflected in the methodology. I would suggest the authors to consider in-depth what are the key challenges of CMG, and how your approach addressed these challenges with the unique designs.
+
+
+
+- While HisRag aims to retrieve “less,” the paper does not address the computational cost of generating and storing embeddings, maintaining per-user indices, or runtime retrieval in large teams or CI/CD workflows.
+
+- Injecting similar commit messages from the past could lead to reduced lexical or structural diversity. There is no analysis of whether HisRag causes overfitting to personal style or introduces repetition in generated messages.
+- It’s unclear whether baseline models were re-tuned or re-evaluated under the same training and testing settings as the HisRag-enhanced models, raising concerns about evaluation fairness.
+- The paper does not report the distribution of history lengths across developers and repositories. Given that the approach depends on historical context, it would be valuable to know how history size impacts performance.
+- Beyond narrowing the retrieval scope, could you elaborate on what differentiates HisRag from prior CMG frameworks like REACT? Also, how generalizable is your approach to non-Java languages or less active repositories where historical context may be sparse?
+- Could you justify the sample size used in the human evaluation in terms of statistical significance? Also, were annotators given explicit guidelines? Was inter-annotator agreement measured?
+- In RQ3, what exactly is removed or changed in the “HisRag_COME without modification embedding” variant? Could you clarify what insights this ablation is meant to isolate?
+
+
+
+- **Baselines:**
+
+The authors’ experimental comparisons are incomplete. Although HisRag is positioned as a RAG-based approach, the paper does not include direct comparisons with widely used RAG methods based on BM25 [51], which are commonly adopted for LLMs in commit message generation tasks. Furthermore, the authors do not compare HisRag with more recent large language model-based approaches, such as the ERICOMMITTER method [68]. ERICOMMITTER is particularly relevant because it also evaluates both lexical-based retrieval (BM25) and semantic-based retrieval (pre-trained code models), offering a broader and stronger benchmark. The omission of these important baselines significantly limits the fairness and completeness of the evaluation and makes it difficult to accurately assess the true advantages of the proposed approach.
+
+- **Human Evaluation:**
+
+Although a human study is included, the evaluation criteria—Informativeness, Conciseness, and Expressiveness—are not clearly defined. The scoring system ranges from 0 to 4, but the meaning and anchors for each score are not explained, leaving it unclear how these scores relate to actual usefulness or human judgment. This lack of clarity could also be the reason for the large standard deviation observed in the results. Furthermore, the evaluation does not include recent strong models such as DeepSeek, which may achieve the best performance, making the assessment less comprehensive and less informative for practitioners.
+
+
+
+Wang, Guoqing, et al. "Is It Hard to Generate Holistic Commit Message?." ACM Transactions on Software Engineering and Methodology 34.2 (2025): 1-28.
+
+1. Can the authors clarify what is fundamentally novel in HisRag compared to existing RAG-based methods like [55], [70], and [68] and standard RAG (based on BM25) or concatenation approaches?
+2. Can the authors provide direct comparisons with widely used RAG baselines such as BM25-based RAG [51] and recent methods like ERICOMMITTER [68]?
+3. Do the authors have evidence that improvements in B-NORM and BLEU correspond to real quality gains, given the known unreliability of these metrics for LLM-based CMG?
+4. Can the authors clearly define the human evaluation criteria, explain the 0–4 scoring system, and consider including recent models like DeepSeek in the human study?
+5. Can the authors evaluate HisRag on additional standard datasets such as MCMD to improve comparability and generalizability?
+
 1：
 缺点：
 
@@ -106,19 +143,19 @@ The projects being used in this study are open-source also. Therefore, a clear d
 
 审稿人 3：
 1. 研究问题结构不佳：RQ1 和 RQ2 过于相似，应合并为一个研究问题，因为尚不清楚它们旨在研究的不同方面是什么。我的理解是，回答 RQ1 的方法利用 LLMtest 作为测试集，而回答 RQ2 的方法基于整个 CommitChronicle 数据集。
-  然而，这只是我的假设，基于他们的方法在两个 RQ 中的结果不同的事实。不幸的是，论文中没有明确说明这一点。相反，如果作者在两个实验设置中使用相同的测试集，他们应该证明为什么他们的方法的结果不同（如表 IV 和表 V 所示）。
+    然而，这只是我的假设，基于他们的方法在两个 RQ 中的结果不同的事实。不幸的是，论文中没有明确说明这一点。相反，如果作者在两个实验设置中使用相同的测试集，他们应该证明为什么他们的方法的结果不同（如表 IV 和表 V 所示）。
 2. RQ3是“人类评估”，这不是一个适当的研究问题。我强烈建议将其重新表述为一个问题，以明确作者打算研究的内容。为了实现这一目标，作者设计并实施了一项用户研究，要求参与者以 0 到 5 的等级评估生成的提交消息和事实真相之间的语义相似性。
-  我不清楚为什么必须这样做作为用户研究来完成，因为这是一项可以通过计算文本相似性指数自动执行的任务。因此，使用人类评估员必须有更好的理由。
-  用户研究的另一个问题是，人类被要求通过将 LLMs 生成的提交消息与真实提交消息进行比较来评估它们的感知质量，这会由于诱发偏差而引入强烈的混杂性，从而导致估值结果不可靠。为什么不要求开发人员在实践中采用这个工具，例如在对照实验中？
+    我不清楚为什么必须这样做作为用户研究来完成，因为这是一项可以通过计算文本相似性指数自动执行的任务。因此，使用人类评估员必须有更好的理由。
+    用户研究的另一个问题是，人类被要求通过将 LLMs 生成的提交消息与真实提交消息进行比较来评估它们的感知质量，这会由于诱发偏差而引入强烈的混杂性，从而导致估值结果不可靠。为什么不要求开发人员在实践中采用这个工具，例如在对照实验中？
 3. 作者使用 Tf-Idf 选择最相关的先前提交消息，用作基于 LLM 的提交消息生成的上下文。论文中没有解释为什么使用这种方法，必须证明其合理性。
 4. 在 RQ2 中，作者表示他们正在寻找最佳温度设置。此搜索的结果是什么？请报告本次调查的结果。
 5. 作者指出，在提交消息生成方面，ChatGPT 应优先于 LLama-2。然而，这两个模型之间的比较本质上是不公平的，因为 ChatGPT 是一个比实验中使用的 LLama-2 模型（Llama-2-7b-chat，最小的 LLama-2 变体）大得多的模型。
-  两个模型之间的性能差异可能是由于模型的大小而不是模型系列造成的。公平的比较是使用 ChatGPT 的直接竞争对手，例如 Claude、更大版本的 LLama-2（例如 13b、70b）或其他开源模型。
-  本研究可以探索特别适合编码任务的模型，因为作者构建的提示包含代码更改。由于这些模型是根据代码进行训练的，并通过代码、自然语言或代码注释进行提示，因此它们可以在此类任务中表现良好。
+    两个模型之间的性能差异可能是由于模型的大小而不是模型系列造成的。公平的比较是使用 ChatGPT 的直接竞争对手，例如 Claude、更大版本的 LLama-2（例如 13b、70b）或其他开源模型。
+    本研究可以探索特别适合编码任务的模型，因为作者构建的提示包含代码更改。由于这些模型是根据代码进行训练的，并通过代码、自然语言或代码注释进行提示，因此它们可以在此类任务中表现良好。
 6. 同一模型系列具有不同的大小将允许作者提供关于模型大小和生成的提交消息的质量之间的权衡的指南。
 7. 最后，论文指出，他们的方法有可能帮助开发人员自动生成提交消息。不幸的是，根据本文提供的经验证据，尚不清楚如何支持这一主张。特别是，就用户研究而言，必须进行不同的设计才能调查这方面，正如我之前的评论中所讨论的。
 8. 演示质量：总体而言，我发现这篇论文的许多部分难以阅读和理解，也是由于缺乏重要信息。在第五节中，作者将第一个提示（P1）称为“最简单的提示”。
-  提示应以更正式、更全面的方式呈现，以确保可复制性和可验证性。提示仅如图3所示，不便于阅读。我建议作者更好地在文本中描述提示，并以更易读的格式提供它，因为提示是LLMs研究的重要组成部分。
+    提示应以更正式、更全面的方式呈现，以确保可复制性和可验证性。提示仅如图3所示，不便于阅读。我建议作者更好地在文本中描述提示，并以更易读的格式提供它，因为提示是LLMs研究的重要组成部分。
 9. 表IV描述为“()内的内容表明改进......”，但该表括号内没有任何内容。
 
 
